--- a/package.json
+++ b/package.json
@@ -10,9 +10,20 @@
     "@types/node": "^16.18.114",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "framer-motion": "^11.11.9",
+    "nanoid": "^5.0.7",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.53.1",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
+    "styled-components": "^6.1.13",
+    "styled-reset": "^4.5.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +50,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-helmet": "^6.1.11"
   }
 }
